Set correct <body/> background color on mobile devices
Former-commit-id: 420f18b54a97a99a45f09e90a94e7326e9f2c10c

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -4,6 +4,13 @@ body {
 	overflow-y: auto;
 }
 
+/* Set `<body/>` background color
+   in order to show correct color when scrolling
+   past top/bottom of the page on touch devices. */
+.body--content-sections {
+	background-color: var(--background-color);
+}
+
 h1, h2, h3 {
   font-weight: 500;
 }
